--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,8 @@ title: Gustavo Banhara
 logo: https://github.com/gbanhara/gbanhara.github.io/blob/main/GB_profile_photo.png?raw=true
 #description: text below image
 show_downloads: true
-theme: jekyll-theme-minimal
+social:
+  github: https://github.com/gbanhara
+  linkedin: https://linkedin.com/in/gustavobanhara
+#theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
