--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,5 @@ social:
   github: https://github.com/gbanhara
   linkedin: https://linkedin.com/in/gustavobanhara
 #theme: jekyll-theme-minimal
-theme: jekyll-theme-cayman
+#theme: jekyll-theme-cayman
+theme: jekyll-theme-dinky
