--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Gustavo Banhara
-logo: https://github.com/gbanhara/gbanhara.github.io/blob/main/GB_profile_photo.png?raw=true
+# title: Gustavo Banhara
+# logo: https://github.com/gbanhara/gbanhara.github.io/blob/main/GB_profile_photo.png?raw=true
 #description: text below image
-show_downloads: true
-social:
-  github: https://github.com/gbanhara
-  linkedin: https://linkedin.com/in/gustavobanhara
+# show_downloads: true
+# social:
+#   github: https://github.com/gbanhara
+#   linkedin: https://linkedin.com/in/gustavobanhara
 #theme: jekyll-theme-minimal
 #theme: jekyll-theme-cayman
-theme: jekyll-theme-dinky
+# theme: jekyll-theme-dinky
